[NFC] Branch test!

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@ We are using Node.js <span id="node-version"></span>,
 Chromium <span id="chrome-version"></span>,
 and Electron <span id="electron-version"></span>.
 <br/>
-By: Thomas & Antonio ^_^
+By: Thomas & Antonio :)
 </body>
 </html>
